@@ -132,7 +132,7 @@ module type S =
 
     val values: 'a t -> 'a Enum.t
       (** Return an enumeration of al the values of a map.*)
-
+(*
     val min_key : 'a t -> (key * 'a)
       (** return the ([key,value]) pair with the smallest key *)
 
@@ -141,7 +141,7 @@ module type S =
 
     val choose : 'a t -> (key * 'a)
       (** return an implementation defined [(key,value)] pair.  As [Set.choose] *)
-
+*)
 (*
     val split : key -> 'a t -> ('a t * 'a option * 'a t)
       (** as [Set.split] *)
